--- a/index.html
+++ b/index.html
@@ -1,39 +1,82 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Alffredo Clone</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Best Representantes</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>Bem-vindo à versão clonada do site Alffredo</h1>
+    <h1>Best Representantes</h1>
     <nav>
       <ul>
         <li><a href="#sobre">Sobre</a></li>
-        <li><a href="#produtos">Produtos</a></li>
+        <li><a href="#servicos">Serviços</a></li>
+        <li><a href="#atuacao">Atuação</a></li>
+        <li><a href="#clientes">Clientes</a></li>
         <li><a href="#contato">Contato</a></li>
       </ul>
     </nav>
   </header>
 
   <section id="sobre">
-    <h2>Sobre nós</h2>
-    <p>Texto exemplo. Vamos substituir juntos com seu conteúdo real.</p>
+    <h2>Quem Somos</h2>
+    <p>A Best Representantes é um escritório de representação comercial especializado no segmento de proteínas bovinas. Fundada e liderada por Teo Edelstein, profissional com mais de 30 anos de experiência em vendas e conhecimento aprofundado do mercado de carnes na região de Porto Alegre e Grande Porto Alegre.</p>
+    <p>Teo Edelstein tem uma trajetória consolidada representando frigoríficos e distribuidoras para os mercados de food service, PDV e varejinho, com foco em prospecção ativa, CRM e tráfego pago.</p>
   </section>
 
-  <section id="produtos">
-    <h2>Nossos Produtos</h2>
-    <p>Em breve vamos listar os produtos aqui.</p>
+  <section id="servicos">
+    <h2>Serviços Oferecidos</h2>
+    <ul>
+      <li>Representação comercial de marcas de proteínas bovinas</li>
+      <li>Prospecção ativa com uso de estratégias digitais e tráfego pago</li>
+      <li>Negociação e acompanhamento de pedidos</li>
+      <li>Abertura de mercado em Porto Alegre e região</li>
+      <li>Apoio em campanhas comerciais e lançamentos</li>
+      <li>Fidelização e crescimento da carteira de clientes</li>
+      <li>Estrategia de vendas por curva ABC (giro, margem, oportunidades)</li>
+    </ul>
+  </section>
+
+  <section id="atuacao">
+    <h2>Área de Atuação</h2>
+    <p>Porto Alegre e cidades da Grande POA:</p>
+    <ul>
+      <li>Canoas, Gravataí, Viamão, Alvorada</li>
+      <li>Cachoeirinha, Esteio, Sapucaia do Sul</li>
+      <li>Novo Hamburgo e região</li>
+    </ul>
+  </section>
+
+  <section id="clientes">
+    <h2>Clientes Atendidos</h2>
+    <p>Redes de supermercados, distribuidores, açougues, casas de carne e restaurantes.</p>
+    <p>Alguns clientes: Grupo NB Steak, Di Paolo, Barrando, Ray Alimentos, PMI Food Service e muitos outros.</p>
+
+    <h3>Diferenciais</h3>
+    <ul>
+      <li>Liderança com experiência no setor</li>
+      <li>Captação de leads qualificados</li>
+      <li>Atendimento humanizado e visitas comerciais</li>
+      <li>Comprometimento com metas e resultados</li>
+      <li>Escritórios parceiros para ampliar a atuação</li>
+    </ul>
   </section>
 
   <section id="contato">
     <h2>Contato</h2>
-    <p>Entre em contato conosco.</p>
+    <p>WhatsApp: <a href="https://wa.me/5551991122872" target="_blank">(51) 99112-2872</a></p>
+    <p>E-mail: <a href="mailto:teowe@terra.com.br">teowe@terra.com.br</a></p>
+    <p>Instagram: <a href="https://instagram.com/teo_bestbeef" target="_blank">@teo_bestbeef</a></p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/teo-edelstein-7a868a1a" target="_blank">Teo Edelstein</a></p>
   </section>
 
   <footer>
+    <p>&copy; 2025 - Best Representantes. Todos os direitos reservados.</p>
+  </footer>
+</body>
+</html>
     <p>&copy; 2025 - Site clonagem Alffredo</p>
   </footer>
 </body>
