--- a/index.html
+++ b/index.html
@@ -79,5 +79,6 @@
 </html>
     <p>&copy; 2025 - Site clonagem Alffredo</p>
   </footer>
+<a class="whatsapp-float" href="https://wa.me/5551991122872" target="_blank">WhatsApp</a>
 </body>
 </html>
