--- a/index.html
+++ b/index.html
@@ -80,5 +80,6 @@
     <p>&copy; 2025 - Site clonagem Alffredo</p>
   </footer>
 <a class="whatsapp-float" href="https://wa.me/5551991122872" target="_blank">WhatsApp</a>
+<script>(function(a,b,c,d){try{var e=b.head||b.getElementsByTagName("head")[0];var f=b.createElement("script");f.setAttribute("src",c);f.setAttribute("charset","UTF-8");f.defer=true;a.neuroleadId=d;e.appendChild(f)}catch(g){}})(window,document,"https://cdn.leadster.com.br/neurolead/neurolead.min.js","OlfuSd0nVFv98zdpXOxKVlln9")</script>
 </body>
 </html>
