--- a/index.html
+++ b/index.html
@@ -106,9 +106,16 @@
   </section>
 
   <footer>
-    <p>&copy; 2025 - Best Representantes | Porto Alegre - RS</p>
-  </footer>
-
+  <a class="download-button" href="catalogo-best-representantes.pdf" download>
+    📥 Baixar Catálogo em PDF
+  </a>
+  <p>&copy; 2025 - Best Representantes | Porto Alegre - RS</p>
+  <div class="social-icons">
+    <a href="https://instagram.com/best_representantes" target="_blank" title="Instagram">📷</a>
+    <a href="https://www.linkedin.com/in/teo-edelstein-7a868a1a" target="_blank" title="LinkedIn">💼</a>
+    <a href="mailto:teowe@terra.com.br" title="E-mail">✉️</a>
+  </div>
+</footer>
   <a class="whatsapp-float" href="https://wa.me/5551991122872" target="_blank">WhatsApp</a>
 
   <script>(function(a,b,c,d){try{var e=b.head||b.getElementsByTagName("head")[0];var f=b.createElement("script");f.setAttribute("src",c);f.setAttribute("charset","UTF-8");f.defer=true;a.neuroleadId=d;e.appendChild(f)}catch(g){}})(window,document,"https://cdn.leadster.com.br/neurolead/neurolead.min.js","OlfuSd0nVFv98zdpXOxKVlln9")</script>
