--- a/index.html
+++ b/index.html
@@ -106,9 +106,14 @@
   </section>
 
   <footer>
-  <a class="download-button" href="catalogo-best-representantes.pdf" download>
-    📥 Baixar Catálogo em PDF
-  </a>
+  <div class="download-buttons">
+    <a class="download-button" href="catalogo-bestbeef.pdf" download>
+      📥 Catálogo Best Beef
+    </a>
+    <a class="download-button" href="catalogo-dalia.pdf" download>
+      📥 Catálogo Dália
+    </a>
+  </div>
   <p>&copy; 2025 - Best Representantes | Porto Alegre - RS</p>
   <div class="social-icons">
     <a href="https://instagram.com/best_representantes" target="_blank" title="Instagram">📷</a>
