--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <section id="sobre">
     <h2>Quem Somos</h2>
     <div class="section-row">
-      <img src="bestbeef.png.png" alt="Equipe Best Representantes" width="300">
+      <img src="logo-bestrepresentantes.png" alt="Logo Best Representantes" width="300">
       <p>A <strong>Best Representantes</strong> é um escritório especializado na representação comercial de marcas do segmento de proteínas, com foco em bovinos e suínos. Com mais de 30 anos de experiência no mercado, liderado por <strong>Teo Edelstein</strong>, nosso compromisso é conectar fornecedores a clientes de alto potencial em Porto Alegre e região metropolitana.</p>
     </div>
   </section>
