--- a/index.html
+++ b/index.html
@@ -85,6 +85,22 @@
     <img src="DiPaolo.png" alt="Di Paolo" width="120">
   </div>
 </section>
+  <section id="representantes">
+  <h2>Nossa Representação Comercial</h2>
+  <div class="representantes">
+    <div class="card-rep">
+      <img src="teo.jpeg" alt="Teo Edelstein">
+      <h3>Teo Edelstein</h3>
+      <p>Mais de 30 anos no mercado de carnes. Especialista em food service e distribuição na região de Porto Alegre.</p>
+    </div>
+    <div class="card-rep">
+      <img src="lucas.jpg" alt="Lucas Felitti">
+      <h3>Lucas Felitti</h3>
+      <p>Responsável pela linha Dália. Atuação focada em varejo e desenvolvimento comercial na Grande Porto Alegre.</p>
+    </div>
+  </div>
+</section>
+
   <section id="contato">
     <h2>Entre em Contato</h2>
     <form action="https://formspree.io/f/your-form-id" method="POST">
