--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
+
   <header>
     <h1>Best Representantes</h1>
     <nav>
@@ -19,6 +20,7 @@
         <li><a href="#bestbeef">Best Beef</a></li>
         <li><a href="#dalia">Dália</a></li>
         <li><a href="#clientes">Clientes</a></li>
+        <li><a href="#representantes">Equipe</a></li>
         <li><a href="#contato">Contato</a></li>
       </ul>
     </nav>
@@ -57,8 +59,6 @@
       <img src="bestbeef.png.png" alt="Logo Best Beef" width="300">
       <div>
         <p>O <strong>Frigorífico Silva</strong> é referência nacional em qualidade de carne bovina, com foco em cortes padronizados e certificados, voltados ao mercado premium. Fundado em Santa Maria (RS), é responsável pela marca <strong>Best Beef</strong>, amplamente reconhecida por seus altos padrões de produção e apresentação.</p>
-        <p>Seu portfólio inclui uma variedade de cortes como: picanha, maminha, entrecot, filé mignon, costela desossada, prime rib, t-bone, bife de chorizo, acém porcionado, entre outros. Os cortes são apresentados em porções, blocos e formatos especiais para grelha, espeto e bife, atendendo às exigências do food service, varejo e atacado.</p>
-        <p>A Best Beef também trabalha com carnes moídas ATM, hambúrgueres e miúdos bovinos, oferecendo uma linha completa para diferentes perfis de cliente.</p>
         <p>Mais informações em: <a href="https://www.frigorificosilva.com.br" target="_blank">www.frigorificosilva.com.br</a></p>
       </div>
     </div>
@@ -67,39 +67,39 @@
   <section id="dalia">
     <h2>Dália Alimentos</h2>
     <div class="section-row">
-   <img src="imagem-dalia.png" alt="Dália Alimentos" width="300">
+      <img src="imagem-dalia.png" alt="Dália Alimentos" width="300">
       <div>
-        <p>A <strong>Dália Alimentos</strong> é uma cooperativa agroindustrial fundada em 1947, em Encantado/RS. Atuando nos segmentos de carnes suínas, aves, lácteos, industrializados e rações, a empresa é reconhecida por sua estrutura verticalizada e controle total da cadeia produtiva, garantindo qualidade e rastreabilidade.</p>
-        <p>Seu mix inclui cortes suínos resfriados, congelados, temperados e defumados, frangos resfriados e congelados, laticínios como leite UHT, iogurtes e queijos, e uma linha completa de embutidos e industrializados. A Dália também atua no mercado internacional, exportando para diversos países.</p>
-        <p>A representação da marca é conduzida pela <strong>Leffa Representações</strong>, sob a responsabilidade de <strong>Lucas Felitti</strong>, com foco no desenvolvimento comercial em Porto Alegre e região.</p>
-        <p>Saiba mais em: <a href="https://dalia.com.br" target="_blank">www.dalia.com.br</a></p>
+        <p>A <strong>Dália Alimentos</strong> é uma cooperativa agroindustrial fundada em 1947, em Encantado/RS. Atua nos segmentos de carnes suínas, aves, lácteos, industrializados e rações. Sua estrutura verticalizada garante rastreabilidade e qualidade em toda a cadeia.</p>
+        <p>Mais informações em: <a href="https://dalia.com.br" target="_blank">www.dalia.com.br</a></p>
       </div>
     </div>
   </section>
- <section id="clientes">
-  <h2>Clientes Atendidos</h2>
-  <p>Trabalhamos com grandes nomes do setor alimentício no Sul do Brasil:</p>
-  <div class="logos">
-    <img src="4beer.png" alt="4Beer" width="120">
-    <img src="NBsteak.png" alt="NB Steak" width="120">
-    <img src="DiPaolo.png" alt="Di Paolo" width="120">
-  </div>
-</section>
+
+  <section id="clientes">
+    <h2>Clientes Atendidos</h2>
+    <p>Trabalhamos com grandes nomes do setor alimentício no Sul do Brasil:</p>
+    <div class="logos-clientes">
+      <img src="4beer.png" alt="4Beer">
+      <img src="NBsteak.png" alt="NB Steak">
+      <img src="DiPaolo.png" alt="Di Paolo">
+    </div>
+  </section>
+
   <section id="representantes">
-  <h2>Nossa Representação Comercial</h2>
-  <div class="representantes">
-    <div class="card-rep">
-      <img src="teo.jpeg" alt="Teo Edelstein">
-      <h3>Teo Edelstein</h3>
-      <p>Mais de 30 anos no mercado de carnes. Especialista em food service e distribuição na região de Porto Alegre.</p>
+    <h2>Nossa Equipe</h2>
+    <div class="representantes">
+      <div class="card-rep">
+        <img src="teo.jpeg" alt="Teo Edelstein">
+        <h3>Teo Edelstein</h3>
+        <p>Mais de 30 anos no mercado de carnes. Especialista em food service e distribuição em Porto Alegre e região.</p>
+      </div>
+      <div class="card-rep">
+        <img src="lucas.jpg" alt="Lucas Felitti">
+        <h3>Lucas Felitti</h3>
+        <p>Representante Dália. Atuação estratégica em varejo e desenvolvimento comercial na Grande Porto Alegre.</p>
+      </div>
     </div>
-    <div class="card-rep">
-      <img src="lucas.jpg" alt="Lucas Felitti">
-      <h3>Lucas Felitti</h3>
-      <p>Responsável pela linha Dália. Atuação focada em varejo e desenvolvimento comercial na Grande Porto Alegre.</p>
-    </div>
-  </div>
-</section>
+  </section>
 
   <section id="contato">
     <h2>Entre em Contato</h2>
@@ -112,7 +112,6 @@
       <textarea id="mensagem" name="mensagem" rows="4" required></textarea><br>
       <button type="submit">Enviar</button>
     </form>
-    <p>Ou entre em contato diretamente com nosso representante:</p>
     <p>📱 WhatsApp: <a href="https://wa.me/5551991122872" target="_blank">(51) 99112-2872</a></p>
     <p>📧 E-mail: <a href="mailto:teowe@terra.com.br">teowe@terra.com.br</a></p>
     <p>📷 Instagram: <a href="https://instagram.com/best_representantes" target="_blank">@best_representantes</a></p>
@@ -120,23 +119,23 @@
   </section>
 
   <footer>
-  <div class="download-buttons">
-    <a class="download-button" href="catalogo-bestbeef.pdf" download>
-      📥 Catálogo Best Beef
-    </a>
-    <a class="download-button" href="catalogo-dalia.pdf" download>
-      📥 Catálogo Dália
-    </a>
-  </div>
-  <p>&copy; 2025 - Best Representantes | Porto Alegre - RS</p>
-  <div class="social-icons">
-    <a href="https://instagram.com/best_representantes" target="_blank" title="Instagram">📷</a>
-    <a href="https://www.linkedin.com/in/teo-edelstein-7a868a1a" target="_blank" title="LinkedIn">💼</a>
-    <a href="mailto:teowe@terra.com.br" title="E-mail">✉️</a>
-  </div>
-</footer>
+    <div class="download-buttons">
+      <a class="download-button" href="catalogo-bestbeef.pdf" download>📥 Catálogo Best Beef</a>
+      <a class="download-button" href="catalogo-dalia.pdf" download>📥 Catálogo Dália</a>
+    </div>
+    <p>&copy; 2025 - Best Representantes | Porto Alegre - RS</p>
+    <div class="social-icons">
+      <a href="https://instagram.com/best_representantes" target="_blank" title="Instagram">📷</a>
+      <a href="https://www.linkedin.com/in/teo-edelstein-7a868a1a" target="_blank" title="LinkedIn">💼</a>
+      <a href="mailto:teowe@terra.com.br" title="E-mail">✉️</a>
+    </div>
+  </footer>
+
   <a class="whatsapp-float" href="https://wa.me/5551991122872" target="_blank">WhatsApp</a>
 
-  <script>(function(a,b,c,d){try{var e=b.head||b.getElementsByTagName("head")[0];var f=b.createElement("script");f.setAttribute("src",c);f.setAttribute("charset","UTF-8");f.defer=true;a.neuroleadId=d;e.appendChild(f)}catch(g){}})(window,document,"https://cdn.leadster.com.br/neurolead/neurolead.min.js","OlfuSd0nVFv98zdpXOxKVlln9")</script>
+  <script>
+    // Leadster script ou outros podem ser incluídos aqui
+  </script>
+
 </body>
 </html>
