--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <h2>Quem Somos</h2>
     <div class="section-row">
       <img src="logo-bestrepresentantes.png" alt="Logo Best Representantes" width="300">
-      <p>A <strong>Best Representantes</strong> é um escritório especializado na representação comercial de marcas do segmento de proteínas, com foco em bovinos e suínos. Com mais de 30 anos de experiência no mercado, liderado por <strong>Teo Edelstein</strong>, nosso compromisso é conectar fornecedores a clientes de alto potencial em Porto Alegre e região metropolitana.</p>
+      <p>A <strong>Best Representantes</strong> é um escritório especializado na representação comercial de marcas do segmento de proteínas, com foco em bovinos e suínos. Com mais de 30 anos de experiência, liderado por <strong>Teo Edelstein</strong>, nosso compromisso é conectar fornecedores a clientes de alto potencial em Porto Alegre e região metropolitana.</p>
     </div>
   </section>
 
@@ -69,7 +69,7 @@
     <div class="section-row">
       <img src="imagem-dalia.png" alt="Dália Alimentos" width="300">
       <div>
-        <p>A <strong>Dália Alimentos</strong> é uma cooperativa agroindustrial fundada em 1947, em Encantado/RS. Atua nos segmentos de carnes suínas, aves, lácteos, industrializados e rações. Sua estrutura verticalizada garante rastreabilidade e qualidade em toda a cadeia.</p>
+        <p>A <strong>Dália Alimentos</strong> é uma cooperativa agroindustrial fundada em 1947, em Encantado/RS, que atua nos segmentos de carnes suínas, aves, lácteos, industrializados e rações. Sua estrutura verticalizada garante rastreabilidade e qualidade em toda a cadeia.</p>
         <p>Mais informações em: <a href="https://dalia.com.br" target="_blank">www.dalia.com.br</a></p>
       </div>
     </div>
@@ -85,21 +85,21 @@
     </div>
   </section>
 
- <section id="representantes">
-  <h2>Nossa Equipe</h2>
-  <div class="representantes">
-    <div class="card-rep">
-      <img src="teo.jpeg" alt="Teo Edelstein">
-      <h3>Teo Edelstein</h3>
-      <p>Mais de 30 anos no mercado de carnes. Especialista em food service e distribuição em Porto Alegre e região.</p>
+  <section id="representantes">
+    <h2>Nossa Equipe</h2>
+    <div class="representantes">
+      <div class="card-rep">
+        <img src="teo.jpeg" alt="Foto de Teo Edelstein">
+        <h3>Teo Edelstein</h3>
+        <p>Mais de 30 anos no mercado de carnes. Especialista em food service e distribuição em Porto Alegre e região.</p>
+      </div>
+      <div class="card-rep">
+        <img src="lucas.jpeg" alt="Foto de Lucas Felitti">
+        <h3>Lucas Felitti</h3>
+        <p>Representante Dália. Atuação estratégica em varejo e desenvolvimento comercial na Grande Porto Alegre.</p>
+      </div>
     </div>
-    <div class="card-rep">
-      <img src="lucas.jpg" alt="Lucas Felitti">
-      <h3>Lucas Felitti</h3>
-      <p>Representante Dália. Atuação estratégica em varejo e desenvolvimento comercial na Grande Porto Alegre.</p>
-    </div>
-  </div>
-</section>
+  </section>
 
   <section id="contato">
     <h2>Entre em Contato</h2>
@@ -133,8 +133,19 @@
 
   <a class="whatsapp-float" href="https://wa.me/5551991122872" target="_blank">WhatsApp</a>
 
+  <!-- Script do Leadster -->
   <script>
-    // Leadster script ou outros podem ser incluídos aqui
+    (function(a,b,c,d){
+      try {
+        var e = b.head || b.getElementsByTagName("head")[0];
+        var f = b.createElement("script");
+        f.setAttribute("src", c);
+        f.setAttribute("charset", "UTF-8");
+        f.defer = true;
+        a.neuroleadId = d;
+        e.appendChild(f);
+      } catch(g) {}
+    })(window, document, "https://cdn.leadster.com.br/neurolead/neurolead.min.js", "OlfuSd0nVFv98zdpXOxKVlln9");
   </script>
 
 </body>
