--- a/index.html
+++ b/index.html
@@ -9,127 +9,14 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
 
-  <!-- Seu CSS principal (opcional) -->
+  <!-- CSS para desktop (≥769px) -->
+  <link rel="stylesheet" href="desktop.css" media="screen and (min-width: 769px)">
+
+  <!-- CSS para mobile (≤768px) -->
+  <link rel="stylesheet" href="mobile.css" media="screen and (max-width: 768px)">
+
+  <!-- CSS geral (reset, tipografia, cores base) -->
   <link rel="stylesheet" href="style.css">
-
-  <!-- CSS de responsividade e menu mobile -->
-  <style>
-    /* Reset básico */
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    body { font-family: 'Poppins', sans-serif; line-height: 1.5; }
-
-    header {
-      position: relative;
-      background: #000;
-      color: #fff;
-      padding: 1rem;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-    }
-    header h1 { font-size: 1.5rem; }
-
-    /* Botão hamburger */
-    .menu-toggle {
-      display: none;
-      font-size: 1.8rem;
-      background: none;
-      border: none;
-      color: #fff;
-      cursor: pointer;
-    }
-
-    nav .nav-list {
-      list-style: none;
-      display: flex;
-      gap: 1rem;
-    }
-    nav .nav-list li a {
-      color: #fff;
-      text-decoration: none;
-      padding: .5rem;
-    }
-
-    /* Mobile */
-    @media (max-width: 768px) {
-      .menu-toggle {
-        display: block;
-      }
-      nav .nav-list {
-        display: none;
-        flex-direction: column;
-        position: absolute;
-        top: 100%;
-        left: 0;
-        width: 100%;
-        background: #000;
-      }
-      nav .nav-list.open {
-        display: flex;
-      }
-      nav .nav-list li {
-        border-bottom: 1px solid #333;
-      }
-      nav .nav-list li a {
-        display: block;
-        padding: 1rem;
-      }
-    }
-
-    /* Seções básicas */
-    section {
-      padding: 2rem 1rem;
-    }
-    .section-row {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 1rem;
-      align-items: center;
-    }
-    .section-row img { max-width: 100%; height: auto; }
-    .cards, .logos, .logos-clientes, .representantes {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 1rem;
-    }
-    .card, .card-rep, .logos img, .logos-clientes img {
-      flex: 1 1 200px;
-    }
-
-    /* Footer */
-    footer {
-      background: #f5f5f5;
-      padding: 1rem;
-      text-align: center;
-    }
-    .download-buttons {
-      margin-bottom: 1rem;
-    }
-    .download-button {
-      margin: 0 .5rem;
-      text-decoration: none;
-      font-weight: 500;
-    }
-    .social-icons a {
-      margin: 0 .3rem;
-      font-size: 1.2rem;
-      text-decoration: none;
-    }
-
-    /* WhatsApp flutuante */
-    .whatsapp-float {
-      position: fixed;
-      bottom: 1rem;
-      right: 1rem;
-      background: #25D366;
-      color: #fff;
-      padding: .8rem 1rem;
-      border-radius: 50px;
-      text-decoration: none;
-      font-weight: bold;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.3);
-    }
-  </style>
 </head>
 <body>
 
@@ -257,7 +144,7 @@
 
   <a class="whatsapp-float" href="https://wa.me/5551991122872" target="_blank">WhatsApp</a>
 
-  <!-- Leadster -->
+  <!-- Script do Leadster -->
   <script>
     (function(a,b,c,d){
       try {
@@ -282,6 +169,10 @@
       navList.classList.toggle('open');
     });
   </script>
+
+</body>
+</html>
+
 
 </body>
 </html>
