--- a/index.html
+++ b/index.html
@@ -9,14 +9,11 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
 
-  <!-- CSS geral (reset, tipografia, cores base e regras mobile originais) -->
+  <!-- CSS geral (reset, tipografia, cores base e mobile original) -->
   <link rel="stylesheet" href="style.css">
 
   <!-- CSS para desktop (≥769px) -->
   <link rel="stylesheet" href="desktop.css" media="screen and (min-width: 769px)">
-
-  <!-- CSS para mobile (≤768px) -->
-  <link rel="stylesheet" href="mobile.css" media="screen and (max-width: 768px)">
 </head>
 <body>
 
@@ -86,7 +83,7 @@
     </div>
   </section>
 
-  <!-- resto do conteúdo permanece igual -->
+  <!-- resto do conteúdo inalterado -->
 
   <!-- Toggle do menu mobile -->
   <script>
