--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
 
-  <!-- CSS geral (reset, tipografia, cores base e mobile original) -->
+  <!-- CSS geral (reset, tipografia, cores base) -->
   <link rel="stylesheet" href="style.css">
 
   <!-- CSS para desktop (≥769px) -->
   <link rel="stylesheet" href="desktop.css" media="screen and (min-width: 769px)">
+
+  <!-- CSS para mobile (≤768px) -->
+  <link rel="stylesheet" href="mobile.css" media="screen and (max-width: 768px)">
 </head>
 <body>
 
@@ -37,7 +40,7 @@
   <section id="sobre">
     <h2>Quem Somos</h2>
     <div class="section-row">
-      <img src="logo-bestrepresentantes.png" alt="Logo Best Representantes" class="company-logo">
+      <img src="logo-bestrepresentantes.png" alt="Logo Best Representantes">
       <p>A <strong>Best Representantes</strong> é um escritório especializado na representação comercial de marcas do segmento de proteínas, com foco em bovinos e suínos. Com mais de 30 anos de experiência, liderado por <strong>Teo Edelstein</strong>, nosso compromisso é conectar fornecedores a clientes de alto potencial em Porto Alegre e região metropolitana.</p>
     </div>
   </section>
@@ -56,15 +59,15 @@
   <section id="marcas">
     <h2>Marcas Representadas</h2>
     <div class="logos">
-      <img src="bestbeef.png.png" alt="Best Beef" class="brand-logo">
-      <img src="imagem-dalia.png" alt="Dália Alimentos" class="brand-logo">
+      <img src="bestbeef.png.png" alt="Best Beef">
+      <img src="imagem-dalia.png" alt="Dália Alimentos">
     </div>
   </section>
 
   <section id="bestbeef">
     <h2>Frigorífico Silva - Best Beef</h2>
     <div class="section-row">
-      <img src="bestbeef.png.png" alt="Logo Best Beef" class="brand-logo">
+      <img src="bestbeef.png.png" alt="Logo Best Beef">
       <div>
         <p>O <strong>Frigorífico Silva</strong> é referência nacional em qualidade de carne bovina, com foco em cortes padronizados e certificados, voltados ao mercado premium. Fundado em Santa Maria (RS), é responsável pela marca <strong>Best Beef</strong>, amplamente reconhecida por seus altos padrões de produção e apresentação.</p>
         <p>Mais informações em: <a href="https://www.frigorificosilva.com.br" target="_blank">www.frigorificosilva.com.br</a></p>
@@ -75,7 +78,7 @@
   <section id="dalia">
     <h2>Dália Alimentos</h2>
     <div class="section-row">
-      <img src="imagem-dalia.png" alt="Dália Alimentos" class="brand-logo">
+      <img src="imagem-dalia.png" alt="Dália Alimentos">
       <div>
         <p>A <strong>Dália Alimentos</strong> é uma cooperativa agroindustrial fundada em 1947, em Encantado/RS, que atua nos segmentos de carnes suínas, aves, lácteos, industrializados e rações. Sua estrutura verticalizada garante rastreabilidade e qualidade em toda a cadeia.</p>
         <p>Mais informações em: <a href="https://dalia.com.br" target="_blank">www.dalia.com.br</a></p>
@@ -83,7 +86,78 @@
     </div>
   </section>
 
-  <!-- resto do conteúdo inalterado -->
+  <section id="clientes">
+    <h2>Clientes Atendidos</h2>
+    <p>Trabalhamos com grandes nomes do setor alimentício no Sul do Brasil:</p>
+    <div class="logos-clientes">
+      <img src="4beer.png" alt="4Beer">
+      <img src="NBsteak.png" alt="NB Steak">
+      <img src="DiPaolo.png" alt="Di Paolo">
+    </div>
+  </section>
+
+  <section id="representantes">
+    <h2>Nossa Equipe</h2>
+    <div class="representantes">
+      <div class="card-rep">
+        <img src="teo.jpeg" alt="Foto de Teo Edelstein">
+        <h3>Teo Edelstein</h3>
+        <p>Mais de 30 anos no mercado de carnes. Especialista em food service e distribuição em Porto Alegre e região.</p>
+      </div>
+      <div class="card-rep">
+        <img src="lucas.jpeg" alt="Foto de Lucas Felitti">
+        <h3>Lucas Felitti</h3>
+        <p>Representante Dália. Atuação estratégica em varejo e desenvolvimento comercial na Grande Porto Alegre.</p>
+      </div>
+    </div>
+  </section>
+
+  <section id="contato">
+    <h2>Entre em Contato</h2>
+    <form action="https://formspree.io/f/your-form-id" method="POST">
+      <label for="nome">Nome:</label><br>
+      <input type="text" id="nome" name="nome" required><br>
+      <label for="email">E-mail:</label><br>
+      <input type="email" id="email" name="email" required><br>
+      <label for="mensagem">Mensagem:</label><br>
+      <textarea id="mensagem" name="mensagem" rows="4" required></textarea><br>
+      <button type="submit">Enviar</button>
+    </form>
+    <p>📱 WhatsApp: <a href="https://wa.me/5551991122872" target="_blank">(51) 99112-2872</a></p>
+    <p>📧 E-mail: <a href="mailto:teowe@terra.com.br">teowe@terra.com.br</a></p>
+    <p>📷 Instagram: <a href="https://instagram.com/best_representantes" target="_blank">@best_representantes</a></p>
+    <p>💼 LinkedIn: <a href="https://www.linkedin.com/in/teo-edelstein-7a868a1a" target="_blank">Teo Edelstein</a></p>
+  </section>
+
+  <footer>
+    <div class="download-buttons">
+      <a class="download-button" href="catalogo-bestbeef.pdf" download>📥 Catálogo Best Beef</a>
+      <a class="download-button" href="catalogo-dalia.pdf" download>📥 Catálogo Dália</a>
+    </div>
+    <p>&copy; 2025 - Best Representantes | Porto Alegre - RS</p>
+    <div class="social-icons">
+      <a href="https://instagram.com/best_representantes" target="_blank" title="Instagram">📷</a>
+      <a href="https://www.linkedin.com/in/teo-edelstein-7a868a1a" target="_blank" title="LinkedIn">💼</a>
+      <a href="mailto:teowe@terra.com.br" title="E-mail">✉️</a>
+    </div>
+  </footer>
+
+  <a class="whatsapp-float" href="https://wa.me/5551991122872" target="_blank">WhatsApp</a>
+
+  <!-- Script do Leadster -->
+  <script>
+    (function(a,b,c,d){
+      try {
+        var e = b.head || b.getElementsByTagName("head")[0];
+        var f = b.createElement("script");
+        f.setAttribute("src", c);
+        f.setAttribute("charset", "UTF-8");
+        f.defer = true;
+        a.neuroleadId = d;
+        e.appendChild(f);
+      } catch(g) {}
+    })(window, document, "https://cdn.leadster.com.br/neurolead/neurolead.min.js", "OlfuSd0nVFv98zdpXOxKVlln9");
+  </script>
 
   <!-- Toggle do menu mobile -->
   <script>
