--- a/index.html
+++ b/index.html
@@ -9,14 +9,11 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
 
-  <!-- CSS geral (reset, tipografia, cores base) -->
+  <!-- CSS geral (reset, tipografia, cores base + mobile) -->
   <link rel="stylesheet" href="style.css">
 
   <!-- CSS para desktop (≥769px) -->
   <link rel="stylesheet" href="desktop.css" media="screen and (min-width: 769px)">
-
-  <!-- CSS para mobile (≤768px) -->
-  <link rel="stylesheet" href="mobile.css" media="screen and (max-width: 768px)">
 </head>
 <body>
 
@@ -40,7 +37,7 @@
   <section id="sobre">
     <h2>Quem Somos</h2>
     <div class="section-row">
-      <img src="logo-bestrepresentantes.png" alt="Logo Best Representantes">
+      <img src="logo-bestrepresentantes.png" alt="Logo Best Representantes" class="company-logo">
       <p>A <strong>Best Representantes</strong> é um escritório especializado na representação comercial de marcas do segmento de proteínas, com foco em bovinos e suínos. Com mais de 30 anos de experiência, liderado por <strong>Teo Edelstein</strong>, nosso compromisso é conectar fornecedores a clientes de alto potencial em Porto Alegre e região metropolitana.</p>
     </div>
   </section>
@@ -59,15 +56,15 @@
   <section id="marcas">
     <h2>Marcas Representadas</h2>
     <div class="logos">
-      <img src="bestbeef.png.png" alt="Best Beef">
-      <img src="imagem-dalia.png" alt="Dália Alimentos">
+      <img src="bestbeef.png.png" alt="Best Beef" class="brand-logo">
+      <img src="imagem-dalia.png" alt="Dália Alimentos" class="brand-logo">
     </div>
   </section>
 
   <section id="bestbeef">
     <h2>Frigorífico Silva - Best Beef</h2>
     <div class="section-row">
-      <img src="bestbeef.png.png" alt="Logo Best Beef">
+      <img src="bestbeef.png.png" alt="Logo Best Beef" class="brand-logo">
       <div>
         <p>O <strong>Frigorífico Silva</strong> é referência nacional em qualidade de carne bovina, com foco em cortes padronizados e certificados, voltados ao mercado premium. Fundado em Santa Maria (RS), é responsável pela marca <strong>Best Beef</strong>, amplamente reconhecida por seus altos padrões de produção e apresentação.</p>
         <p>Mais informações em: <a href="https://www.frigorificosilva.com.br" target="_blank">www.frigorificosilva.com.br</a></p>
@@ -78,7 +75,7 @@
   <section id="dalia">
     <h2>Dália Alimentos</h2>
     <div class="section-row">
-      <img src="imagem-dalia.png" alt="Dália Alimentos">
+      <img src="imagem-dalia.png" alt="Dália Alimentos" class="brand-logo">
       <div>
         <p>A <strong>Dália Alimentos</strong> é uma cooperativa agroindustrial fundada em 1947, em Encantado/RS, que atua nos segmentos de carnes suínas, aves, lácteos, industrializados e rações. Sua estrutura verticalizada garante rastreabilidade e qualidade em toda a cadeia.</p>
         <p>Mais informações em: <a href="https://dalia.com.br" target="_blank">www.dalia.com.br</a></p>
