--- a/index.html
+++ b/index.html
@@ -72,16 +72,16 @@
     </div>
   </section>
 
-  <section id="dalia">
-    <h2>Dália Alimentos</h2>
-    <div class="section-row">
-      <img src="imagem-dalia.png" alt="Dália Alimentos" class="brand-logo">
-      <div>
-        <p>A <strong>Dália Alimentos</strong> é uma cooperativa agroindustrial fundada em 1947, em Encantado/RS, que atua nos segmentos de carnes suínas, aves, lácteos, industrializados e rações. Sua estrutura verticalizada garante rastreabilidade e qualidade em toda a cadeia.</p>
-        <p>Mais informações em: <a href="https://dalia.com.br" target="_blank">www.dalia.com.br</a></p>
-      </div>
+<section id="dalia">
+  <h2>Dália Alimentos</h2>
+  <div class="section-row">
+    <img src="imagem-dalia.png" alt="Dália Alimentos" class="brand-logo">
+    <div>
+      <p>A <strong>Dália Alimentos</strong> é uma cooperativa agroindustrial...</p>
+      <p>Mais informações em: <a href="https://dalia.com.br" target="_blank">www.dalia.com.br</a></p>
     </div>
-  </section>
+  </div>
+</section>
 
   <section id="clientes">
     <h2>Clientes Atendidos</h2>
