--- a/index.html
+++ b/index.html
@@ -34,11 +34,12 @@
     </nav>
   </header>
 
+  <!-- Seções de conteúdo -->
   <section id="sobre">
     <h2>Quem Somos</h2>
     <div class="section-row">
       <img src="logo-bestrepresentantes.png" alt="Logo Best Representantes" class="company-logo">
-      <p>A <strong>Best Representantes</strong> é um escritório especializado na representação comercial de marcas do segmento de proteínas, com foco em bovinos e suínos. Com mais de 30 anos de experiência, liderado por <strong>Teo Edelstein</strong>, nosso compromisso é conectar fornecedores a clientes de alto potencial em Porto Alegre e região metropolitana.</p>
+      <p>A <strong>Best Representantes</strong> é um escritório especializado na representação comercial de marcas do segmento de proteínas, com foco em bovinos e suínos...</p>
     </div>
   </section>
 
@@ -66,22 +67,22 @@
     <div class="section-row">
       <img src="bestbeef.png.png" alt="Logo Best Beef" class="brand-logo">
       <div>
-        <p>O <strong>Frigorífico Silva</strong> é referência nacional em qualidade de carne bovina, com foco em cortes padronizados e certificados, voltados ao mercado premium. Fundado em Santa Maria (RS), é responsável pela marca <strong>Best Beef</strong>, amplamente reconhecida por seus altos padrões de produção e apresentação.</p>
+        <p>O <strong>Frigorífico Silva</strong> é referência nacional em qualidade de carne bovina...</p>
         <p>Mais informações em: <a href="https://www.frigorificosilva.com.br" target="_blank">www.frigorificosilva.com.br</a></p>
       </div>
     </div>
   </section>
 
-<section id="dalia">
-  <h2>Dália Alimentos</h2>
-  <div class="section-row">
-    <img src="imagem-dalia.png" alt="Dália Alimentos" class="brand-logo">
-    <div>
-      <p>A <strong>Dália Alimentos</strong> é uma cooperativa agroindustrial...</p>
-      <p>Mais informações em: <a href="https://dalia.com.br" target="_blank">www.dalia.com.br</a></p>
+  <section id="dalia">
+    <h2>Dália Alimentos</h2>
+    <div class="section-row">
+      <img src="imagem-dalia.png" alt="Dália Alimentos" class="brand-logo">
+      <div>
+        <p>A <strong>Dália Alimentos</strong> é uma cooperativa agroindustrial...</p>
+        <p>Mais informações em: <a href="https://dalia.com.br" target="_blank">www.dalia.com.br</a></p>
+      </div>
     </div>
-  </div>
-</section>
+  </section>
 
   <section id="clientes">
     <h2>Clientes Atendidos</h2>
@@ -99,12 +100,12 @@
       <div class="card-rep">
         <img src="teo.jpeg" alt="Foto de Teo Edelstein">
         <h3>Teo Edelstein</h3>
-        <p>Mais de 30 anos no mercado de carnes. Especialista em food service e distribuição em Porto Alegre e região.</p>
+        <p>Mais de 30 anos no mercado de carnes...</p>
       </div>
       <div class="card-rep">
         <img src="lucas.jpeg" alt="Foto de Lucas Felitti">
         <h3>Lucas Felitti</h3>
-        <p>Representante Dália. Atuação estratégica em varejo e desenvolvimento comercial na Grande Porto Alegre.</p>
+        <p>Representante Dália...</p>
       </div>
     </div>
   </section>
@@ -121,9 +122,6 @@
       <button type="submit">Enviar</button>
     </form>
     <p>📱 WhatsApp: <a href="https://wa.me/5551991122872" target="_blank">(51) 99112-2872</a></p>
-    <p>📧 E-mail: <a href="mailto:teowe@terra.com.br">teowe@terra.com.br</a></p>
-    <p>📷 Instagram: <a href="https://instagram.com/best_representantes" target="_blank">@best_representantes</a></p>
-    <p>💼 LinkedIn: <a href="https://www.linkedin.com/in/teo-edelstein-7a868a1a" target="_blank">Teo Edelstein</a></p>
   </section>
 
   <footer>
@@ -133,9 +131,8 @@
     </div>
     <p>&copy; 2025 - Best Representantes | Porto Alegre - RS</p>
     <div class="social-icons">
-      <a href="https://instagram.com/best_representantes" target="_blank" title="Instagram">📷</a>
-      <a href="https://www.linkedin.com/in/teo-edelstein-7a868a1a" target="_blank" title="LinkedIn">💼</a>
-      <a href="mailto:teowe@terra.com.br" title="E-mail">✉️</a>
+      <a href="https://instagram.com/best_representantes" target="_blank">📷</a>
+      <a href="https://www.linkedin.com/in/teo-edelstein-7a868a1a" target="_blank">💼</a>
     </div>
   </footer>
 
